#5: feat(adicionado descoberta da api), refat(app blazor alterado para webassembly)

--- a/FCG.Blazor/Pages/Auth.razor
+++ b/FCG.Blazor/Pages/Auth.razor
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Authorization
 
 @attribute [Authorize]
+@rendermode InteractiveWebAssembly
 
 <PageTitle>Auth</PageTitle>
 
