--- a/FCG.Blazor/_Imports.razor
+++ b/FCG.Blazor/_Imports.razor
@@ -7,5 +7,4 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using FCG.Blazor
-@using FCG.Blazor.Components
+@using BlazorApp1.Client
