--- a/FCG.Blazor/Components/Auth/Auth.razor
+++ b/FCG.Blazor/Components/Auth/Auth.razor
@@ -1,6 +1,7 @@
 ﻿@page "/auth"
 
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
 
 @attribute [Authorize]
 @rendermode InteractiveWebAssembly
